# yourcraft

./: .gitignore  Cargo.toml  Makefile  Readme.md  devenv.nix  devenv.yaml  main  requirements.txt
.github/workflows/: rust.yml
asm/: Makefile  hello  hello.asm
py/: classic_component.py  classic_entity.py  main.py  network.py  network_test.py
py/entities/: __init__.py  component.py  entity.py  immutabledict.py
py/saves/: dev_read.txt
rs/: console.rs  constants.rs  main.rs  network.rs  player.rs  world.rs
src/: collision.c  collision.h  game.c  game.h  main.c  main.h  main.rs  network.rs  player.rs  render.c  render.h  struct.h  world.rs
src/client/: wrapper.rs
src/client/py/: main.py
src/server/: main.rs
