[package]
name = "yourcraft"
description = "KOSEN-KMITL Programming 4 Final Project - A 2d sandbox game server."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yourcraft-server"
path = "rs/main.rs"

[dependencies]
log = "0.4.25"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
serde-pickle = "1.2.0"
serde_bytes = "0.11.15"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
rand = "0.9.0"
rayon = "1.10.0"
clap = { version = "4.5.27", features = ["derive"] }
thiserror = "2.0.11"
get-size = "0.1.4"
